added in validation for routes and authentication for routes
