# swagger.json
@@ -44,6 +44,16 @@
     }
   },
   "paths": {
+    "/test": {
+      "get": {
+        "description": "",
+        "responses": {
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
     "/": {
       "get": {
         "tags": [
@@ -127,34 +137,47 @@
           "Exercises"
         ],
         "summary": "Creates a new Exercise",
-        "description": "",
+        "description": "Endpoint to create a new exercise with exercise validation. Only Name and Description are required.",
         "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "name": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Name"
                 },
                 "description": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Description"
                 },
                 "muscleGroup": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Muscle Group"
                 },
                 "equipment": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Equipment"
                 },
                 "reps": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 4
                 },
                 "weight": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Body Weight or 120 lbs"
                 },
                 "sets": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "2-3"
                 }
               }
             }
@@ -162,10 +185,16 @@
         ],
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "Exercise created successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Failed to create exercise"
           }
         }
       }
@@ -205,7 +234,7 @@
           "Exercises"
         ],
         "summary": "Updates a Exercise requiring the exercise ID",
-        "description": "",
+        "description": "Endpoint to update an already existing exercise with validation. Only Name and Description are required.",
         "parameters": [
           {
             "name": "id",
@@ -214,31 +243,44 @@
             "type": "string"
           },
           {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "name": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Name"
                 },
                 "description": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Description"
                 },
                 "muscleGroup": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Muscle Group"
                 },
                 "equipment": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Equipment"
                 },
                 "reps": {
-                  "example": "any"
+                  "type": "number",
+                  "example": 4
                 },
                 "weight": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Body Weight or 120 lbs"
                 },
                 "sets": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "2-3"
                 }
               }
             }
@@ -246,10 +288,13 @@
         ],
         "responses": {
           "204": {
-            "description": "No Content"
+            "description": "Exercise created successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Failed to create exercise"
           }
         }
       },
@@ -265,20 +310,25 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
           "204": {
-            "description": "No Content"
+            "description": "Exercise deleted successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Failed to delete exercise"
           }
         }
       }
@@ -307,25 +357,43 @@
           "Workouts"
         ],
         "summary": "Creates a new Workout",
-        "description": "",
+        "description": "Endpoint to create a new workout with workout validation. Only Title, Description, and Exercises are required.",
         "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "title": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Workout Title"
                 },
                 "description": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Description"
                 },
                 "muscleGroup": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Muscle Group"
                 },
                 "exercises": {
-                  "example": "any"
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "id": {
+                        "type": "string",
+                        "example": "Exercise #1 ID"
+                      }
+                    }
+                  }
                 }
               }
             }
@@ -333,10 +401,16 @@
         ],
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "Workout created successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Failed to create workout"
           }
         }
       }
@@ -376,7 +450,7 @@
           "Workouts"
         ],
         "summary": "Updates a Workout requiring a workout ID",
-        "description": "",
+        "description": "Endpoint to update an already existing workout with workout validation. Only Title, Description, and Exercises are required.",
         "parameters": [
           {
             "name": "id",
@@ -385,22 +459,40 @@
             "type": "string"
           },
           {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "title": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Update Workout Title"
                 },
                 "description": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Update Description"
                 },
                 "muscleGroup": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Update Muscle Group"
                 },
                 "exercises": {
-                  "example": "any"
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "id": {
+                        "type": "string",
+                        "example": "Update Exercise #1 ID"
+                      }
+                    }
+                  }
                 }
               }
             }
@@ -408,10 +500,16 @@
         ],
         "responses": {
           "204": {
-            "description": "No Content"
+            "description": "Workout updated successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Failed to update workout"
           }
         }
       },
@@ -427,20 +525,25 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
           "204": {
-            "description": "No Content"
+            "description": "Workout deleted successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Failed to delete workout"
           }
         }
       }
@@ -469,28 +572,39 @@
           "Logs"
         ],
         "summary": "Creates a new workout Log",
-        "description": "",
+        "description": "Endpoint to create an already existing workout log with validation. UserID, Date, WorkoutID, and Duration are required.",
         "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "userId": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Workout Title"
                 },
                 "date": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Description"
                 },
                 "workoutId": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Workout ID"
                 },
                 "duration": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Duration"
                 },
                 "notes": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Log Notes"
                 }
               }
             }
@@ -498,10 +612,16 @@
         ],
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "Log created successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Failed to create log"
           }
         }
       }
@@ -537,7 +657,7 @@
           "Logs"
         ],
         "summary": "Updates a workout Log requiring a workout Log ID",
-        "description": "",
+        "description": "Endpoint to update an already existing workout log with validation. UserID, Date, WorkoutID, and Duration are required.",
         "parameters": [
           {
             "name": "id",
@@ -546,25 +666,36 @@
             "type": "string"
           },
           {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
             "name": "body",
             "in": "body",
+            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "userId": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Update Workout Title"
                 },
                 "date": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Update Description"
                 },
                 "workoutId": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Update Workout ID"
                 },
                 "duration": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Update Duration"
                 },
                 "notes": {
-                  "example": "any"
+                  "type": "string",
+                  "example": "Update Log Notes"
                 }
               }
             }
@@ -572,10 +703,16 @@
         ],
         "responses": {
           "204": {
-            "description": "No Content"
+            "description": "Log updated successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Failed to update log"
           }
         }
       },
@@ -591,20 +728,25 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
           "204": {
-            "description": "No Content"
+            "description": "Log deleted successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Failed to delete log"
           }
         }
       }
